Finished out OPM. Polishing pass on MPE.

--- a/GameData/OuterParallax/MPE/_Scatters/Configs_C/KiKi.cfg
+++ b/GameData/OuterParallax/MPE/_Scatters/Configs_C/KiKi.cfg
@@ -2,7 +2,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 {
 	Body
 	{
-		name = KiKi // To activate this config, replace ParallaxScatters-UPGRADED with ParallaxScatters
+		name = KiKi
 		configVersion = 2
 		Scatter
 		{
