--- a/GameData/OuterParallax/MPE/_Scatters/Configs_C/Vant.cfg
+++ b/GameData/OuterParallax/MPE/_Scatters/Configs_C/Vant.cfg
@@ -1,4 +1,4 @@
-ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
+ParallaxScatters
 {
 	Body
 	{
@@ -265,7 +265,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 		Scatter
 		{
 			name = MedRocksVar3
-			model = Parallax_StockScatterTextures/Models/Mun/clustermed
+			model = Parallax_StockScatterTextures/Models/Dres/largevar2lod0
 			collisionLevel = 2
 			Optimizations
 			{
@@ -291,15 +291,14 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				shader = Custom/ParallaxInstancedSolid
 				_MainTex = Parallax_StockScatterTextures/Textures/Dres/PluginData/rockatlas.dds
 				_BumpMap = Parallax_StockScatterTextures/Textures/Dres/PluginData/rockatlasnrm.dds
-				_SpecularIntensity = 0.0600000024
 				_SpecularPower = 15
-				_NormalSpecularInfluence = 1
-				_Hapke = 0.43
-				_BumpScale = 1
+				_SpecularIntensity = 0.0600000024
 				_FresnelPower = 3
 				_EnvironmentMapFactor = 1
-				_Color = 1.2,1.2,1.2,1
-				_FresnelColor = 0.15,0.15,0.15,1
+				_BumpScale = 1
+				_Hapke = 0.430000007
+				_FresnelColor = 0.150000006,0.150000006,0.150000006,1
+				_Color = 1.20000005,1.20000005,1.20000005,1
 				_CullMode = 2
 				Keywords
 				{
@@ -307,18 +306,18 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			}
 			Distribution
 			{
-				seed = 5.3
-				spawnChance = 1
+				seed = 9.31000042
+				spawnChance = 0.800000012
 				range = 900
-				populationMultiplier = 14
-				minScale = 0.1,0.1,0.1
-				maxScale = 0.15,0.15,0.15
+				populationMultiplier = 5
+				minScale = 0.100000001,0.100000001,0.100000001
+				maxScale = 0.150000006,0.150000006,0.150000006
 				scaleRandomness = 0.5
-				cutoffScale = 0.3
+				cutoffScale = 0.300000012
 				steepPower = 3
 				steepContrast = 4.5
-				steepMidpoint = 0.731
-				maxNormalDeviance = 0.3
+				steepMidpoint = 0.731000006
+				maxNormalDeviance = 0.271442503
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -328,23 +327,20 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				{
 					LOD
 					{
-						model = Parallax_StockScatterTextures/Models/Mun/clustermed2
-						range = 60
+						model = Parallax_StockScatterTextures/Models/Dres/largevar2lod1
+						range = 60.0000038
 						MaterialOverride
 						{
 						}
 					}
 					LOD
 					{
-						model = Parallax_StockScatterTextures/Models/Mun/clustermed3
-						range = 120
+						model = Parallax_StockScatterTextures/Models/Dres/largevar2lod2
+						range = 120.000008
 						MaterialOverride
 						{
 						}
 					}
-				}
-				BiomeBlacklist
-				{
 				}
 			}
 		}
@@ -377,15 +373,14 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				shader = Custom/ParallaxInstancedSolid
 				_MainTex = Parallax_StockScatterTextures/Textures/Dres/PluginData/rockatlas.dds
 				_BumpMap = Parallax_StockScatterTextures/Textures/Dres/PluginData/rockatlasnrm.dds
-				_SpecularIntensity = 0.0600000024
 				_SpecularPower = 15
-				_NormalSpecularInfluence = 1
-				_Hapke = 0.43
-				_BumpScale = 1
+				_SpecularIntensity = 0.0600000024
 				_FresnelPower = 3
 				_EnvironmentMapFactor = 1
-				_Color = 1.2,1.2,1.2,1
-				_FresnelColor = 0.15,0.15,0.15,1
+				_BumpScale = 1
+				_Hapke = 0.430000007
+				_FresnelColor = 0.150000006,0.150000006,0.150000006,1
+				_Color = 1.20000005,1.20000005,1.20000005,1
 				_CullMode = 2
 				Keywords
 				{
@@ -393,18 +388,18 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			}
 			Distribution
 			{
-				seed = 5.3
+				seed = 5.9000001
 				spawnChance = 1
 				range = 1650
-				populationMultiplier = 14
-				minScale = 0.1,0.1,0.1
-				maxScale = 0.15,0.15,0.15
+				populationMultiplier = 6
+				minScale = 0.100000001,0.100000001,0.100000001
+				maxScale = 0.150000006,0.150000006,0.150000006
 				scaleRandomness = 0.5
-				cutoffScale = 0.3
+				cutoffScale = 0.300000012
 				steepPower = 3
 				steepContrast = 4.5
-				steepMidpoint = 0.731
-				maxNormalDeviance = 0.3
+				steepMidpoint = 0.731000006
+				maxNormalDeviance = 0.30000037
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -428,9 +423,6 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 						{
 						}
 					}
-				}
-				BiomeBlacklist
-				{
 				}
 			}
 		}
