--- a/GameData/OuterParallax/OPM/OPM_ParallaxTerrain_C.cfg
+++ b/GameData/OuterParallax/OPM/OPM_ParallaxTerrain_C.cfg
@@ -1,7 +1,7 @@
 ParallaxTerrain
 {
 	Body
-	{ //
+	{ // **
 		name = Hale
 		emissive = True
 		ShaderProperties
@@ -16,6 +16,7 @@ ParallaxTerrain
 			_BumpMapSteep = OuterParallax/Textures/Regolith_Nrm.dds
 			_DisplacementMap = OuterParallax/Textures/Regolith_Disp.dds
 			_InfluenceMap = OuterParallax/Textures/Regolith_Inf.dds
+			_OcclusionMap = OuterParallax/Textures/Hale_AO.dds
 			_SteepPower = 0
 			_SteepContrast = 1
 			_SteepMidpoint = 0.5
@@ -38,7 +39,7 @@ ParallaxTerrain
 		}
 	}
 	Body
-	{ //
+	{ // **
 		name = Ovok
 		emissive = True
 		ShaderProperties
@@ -53,6 +54,7 @@ ParallaxTerrain
 			_BumpMapSteep = OuterParallax/Textures/SnowFluffy_Nrm.dds
 			_DisplacementMap = OuterParallax/Textures/SnowFluffy_Disp.dds
 			_InfluenceMap = OuterParallax/Textures/SnowFluffy_Inf.dds
+			_OcclusionMap = OuterParallax/Textures/Geito_AO.dds
 			_SteepPower = 0
 			_SteepContrast = 1
 			_SteepMidpoint = 0.5
@@ -75,7 +77,7 @@ ParallaxTerrain
 		}
 	}
 	Body
-	{ //
+	{ // **
 		name = Slate
 		emissive = True
 		ShaderProperties
@@ -90,6 +92,7 @@ ParallaxTerrain
 			_BumpMapSteep = OuterParallax/Textures/SlateSteep_Nrm.dds
 			_DisplacementMap = OuterParallax/Textures/SlateDisplacement.dds
 			_InfluenceMap = OuterParallax/Textures/SlateInfluence.dds
+			_OcclusionMap = OuterParallax/Textures/Slate_AO.dds
 			_SteepPower = 4
 			_SteepContrast = 2
 			_SteepMidpoint = 0.75
@@ -112,7 +115,7 @@ ParallaxTerrain
 		}
 	}
 	Body
-	{ //
+	{ // **
 		name = Tekto
 		emissive = False
 		ShaderProperties
@@ -127,6 +130,7 @@ ParallaxTerrain
 			_BumpMapSteep = OuterParallax/Textures/TektoSteep_Nrm.dds
 			_DisplacementMap = OuterParallax/Textures/TektoDisplacement.dds
 			_InfluenceMap = OuterParallax/Textures/TektoInfluence.dds
+			_OcclusionMap = OuterParallax/Textures/Tekto_AO.dds
 			_SteepPower = 3
 			_SteepContrast = 2.5
 			_SteepMidpoint = 0.670000017
@@ -149,7 +153,7 @@ ParallaxTerrain
 		}
 	}
 	Body
-	{ //
+	{ // **
 		name = Tal
 		emissive = False
 		ShaderProperties
@@ -164,6 +168,7 @@ ParallaxTerrain
 			_BumpMapSteep = Parallax_StockTerrainTextures/Dres/PluginData/steep01.dds
 			_DisplacementMap = Parallax_StockTerrainTextures/Bop/PluginData/displacement.dds
 			_InfluenceMap = Parallax_StockTerrainTextures/Bop/PluginData/influence.dds
+			_OcclusionMap = Parallax_StockTerrainTextures/Bop/PluginData/occlusion.dds
 			_SteepPower = 0.00100000005
 			_SteepContrast = 4
 			_SteepMidpoint = 0.600000024
@@ -186,7 +191,7 @@ ParallaxTerrain
 		}
 	}
 	Body
-	{ //
+	{ // **
 		name = Wal
 		emissive = False
 		ShaderProperties
@@ -201,6 +206,7 @@ ParallaxTerrain
 			_BumpMapSteep = Parallax_StockTerrainTextures/Pol/PluginData/steep01.dds
 			_DisplacementMap = Parallax_StockTerrainTextures/Pol/PluginData/displacement.dds
 			_InfluenceMap = Parallax_StockTerrainTextures/Pol/PluginData/influence.dds
+			_OcclusionMap = Parallax_StockTerrainTextures/Pol/PluginData/occlusion.dds
 			_SteepPower = 10
 			_SteepContrast = 4
 			_SteepMidpoint = 0.699999988
@@ -223,7 +229,7 @@ ParallaxTerrain
 		}
 	}
 	Body
-	{ //
+	{ // **
 		name = Priax
 		emissive = False
 		ShaderProperties
@@ -238,6 +244,7 @@ ParallaxTerrain
 			_BumpMapSteep = Parallax_StockTerrainTextures/Gilly/PluginData/mid01.dds
 			_DisplacementMap = Parallax_StockTerrainTextures/Gilly/PluginData/displacement.dds
 			_InfluenceMap = Parallax_StockTerrainTextures/Gilly/PluginData/influence.dds
+			_OcclusionMap = Parallax_StockTerrainTextures/Gilly/PluginData/occlusion.dds
 			_SteepPower = 0
 			_SteepContrast = 1
 			_SteepMidpoint = 0.5
@@ -260,7 +267,7 @@ ParallaxTerrain
 		}
 	}
 	Body
-	{ //
+	{ // **
 		name = Polta
 		emissive = False
 		ShaderProperties
@@ -275,6 +282,7 @@ ParallaxTerrain
 			_BumpMapSteep = OuterParallax/Textures/PoltaSteep_Nrm.dds
 			_DisplacementMap = OuterParallax/Textures/PoltaDisplacement.dds
 			_InfluenceMap = OuterParallax/Textures/PoltaInfluence.dds
+			_OcclusionMap = OuterParallax/Textures/Polta_AO.dds
 			_SteepPower = 15
 			_SteepContrast = 4
 			_SteepMidpoint = 0.600000024
@@ -297,7 +305,7 @@ ParallaxTerrain
 		}
 	}
 	Body
-	{ //
+	{ // **
 		name = Thatmo
 		emissive = False
 		ShaderProperties
@@ -312,6 +320,7 @@ ParallaxTerrain
 			_BumpMapSteep = OuterParallax/Textures/ThatmoSteep_Nrm.dds
 			_DisplacementMap = OuterParallax/Textures/ThatmoDisplacement.dds
 			_InfluenceMap = OuterParallax/Textures/ThatmoInfluence.dds
+			_OcclusionMap = OuterParallax/Textures/Thatmo_AO.dds
 			_SteepPower = 11
 			_SteepContrast = 4
 			_SteepMidpoint = 0.699999988
@@ -334,7 +343,7 @@ ParallaxTerrain
 		}
 	}
 	Body
-	{ //
+	{ // **
 		name = Nissee
 		emissive = False
 		ShaderProperties
@@ -349,6 +358,7 @@ ParallaxTerrain
 			_BumpMapSteep = OuterParallax/Textures/GravelLarge_Nrm.dds
 			_DisplacementMap = OuterParallax/Textures/GravelLarge_Disp.dds
 			_InfluenceMap = OuterParallax/Textures/GravelLarge_Inf.dds
+			_OcclusionMap = OuterParallax/Textures/Nissee_AO.dds
 			_SteepPower = 0
 			_SteepContrast = 1
 			_SteepMidpoint = 0.5
@@ -371,7 +381,7 @@ ParallaxTerrain
 		}
 	}
 	Body
-	{ //
+	{ // **
 		name = Plock
 		emissive = True
 		ShaderProperties
@@ -386,6 +396,7 @@ ParallaxTerrain
 			_BumpMapSteep = OuterParallax/Textures/PlockSteep_Nrm.dds
 			_DisplacementMap = OuterParallax/Textures/PlockDisplacement.dds
 			_InfluenceMap = OuterParallax/Textures/PlockInfluence.dds
+			_OcclusionMap = OuterParallax/Textures/Karen_AO.dds
 			_SteepPower = 2
 			_SteepContrast = 1.20000005
 			_SteepMidpoint = 0.620000005
@@ -408,7 +419,7 @@ ParallaxTerrain
 		}
 	}
 	Body
-	{ //
+	{ // **
 		name = Karen
 		emissive = False
 		ShaderProperties
@@ -423,6 +434,7 @@ ParallaxTerrain
 			_BumpMapSteep = OuterParallax/Textures/PlockSteep_Nrm.dds
 			_DisplacementMap = OuterParallax/Textures/PlockDisplacement.dds
 			_InfluenceMap = OuterParallax/Textures/PlockInfluence.dds
+			_OcclusionMap = OuterParallax/Textures/Karen_AO.dds
 			_SteepPower = 3
 			_SteepContrast = 1
 			_SteepMidpoint = 0.620000005
