--- a/GameData/OuterParallax/OPM/_Scatters/Configs_C/Priax.cfg
+++ b/GameData/OuterParallax/OPM/_Scatters/Configs_C/Priax.cfg
@@ -1,8 +1,8 @@
-ParallaxScatters-UPGRADED
+ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,OPM]
 {
 	Body
 	{
-		name = Priax // To activate this config, replace ParallaxScatters-UPGRADED with ParallaxScatters
+		name = Priax
 		configVersion = 2
 		Scatter
 		{
@@ -31,18 +31,16 @@ ParallaxScatters-UPGRADED
 			Material
 			{
 				shader = Custom/ParallaxInstancedSolid
-				_MainTex = Parallax_StockScatterTextures/Textures/Gilly/PluginData/low00.dds
-				_BumpMap = Parallax_StockScatterTextures/Textures/Gilly/PluginData/low01.dds
+				_MainTex = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlas.dds
 				_BumpMap = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlasnrm.dds
-				_SpecularIntensity = 0
 				_SpecularPower = 32
-				_NormalSpecularInfluence = 1
-				_Hapke = 0.349999994
-				_BumpScale = 1.5
+				_SpecularIntensity = 0
 				_FresnelPower = 3
 				_EnvironmentMapFactor = 1
-				_Color = 0.949999988,1,1,1
+				_BumpScale = 1.5
+				_Hapke = 0.349999994
 				_FresnelColor = 0.150000006,0.150000006,0.150000006,1
+				_Color = 0.949999988,1,1,1
 				_CullMode = 2
 				Keywords
 				{
@@ -52,7 +50,7 @@ ParallaxScatters-UPGRADED
 			{
 				seed = 2
 				spawnChance = 1
-				range = 100
+				range = 150
 				populationMultiplier = 26
 				minScale = 0.100000001,0.100000001,0.100000001
 				maxScale = 0.200000003,0.200000003,0.200000003
@@ -61,7 +59,7 @@ ParallaxScatters-UPGRADED
 				steepPower = 1.5
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.5
+				maxNormalDeviance = 0.500000715
 				minAltitude = -1000
 				maxAltitude = 100000
 				altitudeFadeRange = 10
@@ -86,15 +84,12 @@ ParallaxScatters-UPGRADED
 						}
 					}
 				}
-				BiomeBlacklist
-				{
-				}
 			}
 		}
 		Scatter
 		{
 			name = SmallRocksVar2
-			model = Parallax_StockScatterTextures/Models/Gilly/smallvar2lod0
+			model = Parallax_StockScatterTextures/Models/Mun/clusterofsmalls
 			collisionLevel = 1
 			Optimizations
 			{
@@ -118,18 +113,16 @@ ParallaxScatters-UPGRADED
 			Material
 			{
 				shader = Custom/ParallaxInstancedSolid
-				_MainTex = Parallax_StockScatterTextures/Textures/Gilly/PluginData/low00.dds
-				_BumpMap = Parallax_StockScatterTextures/Textures/Gilly/PluginData/low01.dds
+				_MainTex = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlas.dds
 				_BumpMap = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlasnrm.dds
-				_SpecularIntensity = 0
 				_SpecularPower = 32
-				_NormalSpecularInfluence = 1
-				_Hapke = 0.349999994
-				_BumpScale = 1.5
+				_SpecularIntensity = 0
 				_FresnelPower = 3
 				_EnvironmentMapFactor = 1
-				_Color = 0.949999988,1,1,1
+				_BumpScale = 1.5
+				_Hapke = 0.349999994
 				_FresnelColor = 0.150000006,0.150000006,0.150000006,1
+				_Color = 0.949999988,1,1,1
 				_CullMode = 2
 				Keywords
 				{
@@ -137,18 +130,18 @@ ParallaxScatters-UPGRADED
 			}
 			Distribution
 			{
-				seed = 1
-				spawnChance = 1
-				range = 100
-				populationMultiplier = 24
-				minScale = 0.100000001,0.100000001,0.100000001
-				maxScale = 0.200000003,0.200000003,0.200000003
+				seed = 1.5
+				spawnChance = 0.400000006
+				range = 150
+				populationMultiplier = 3
+				minScale = 0.0500000007,0.0500000007,0.0500000007
+				maxScale = 0.150000006,0.150000006,0.150000006
 				scaleRandomness = 0.5
 				cutoffScale = 0.00999999978
 				steepPower = 1.5
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.5
+				maxNormalDeviance = 0.500000715
 				minAltitude = -1000
 				maxAltitude = 100000
 				altitudeFadeRange = 10
@@ -158,7 +151,7 @@ ParallaxScatters-UPGRADED
 				{
 					LOD
 					{
-						model = Parallax_StockScatterTextures/Models/Gilly/smallvar2lod1
+						model = Parallax_StockScatterTextures/Models/Mun/clusterofsmalls2
 						range = 15
 						MaterialOverride
 						{
@@ -166,15 +159,12 @@ ParallaxScatters-UPGRADED
 					}
 					LOD
 					{
-						model = Parallax_StockScatterTextures/Models/Gilly/smallvar2lod2
+						model = Parallax_StockScatterTextures/Models/Mun/clusterofsmalls3
 						range = 30
 						MaterialOverride
 						{
 						}
 					}
-				}
-				BiomeBlacklist
-				{
 				}
 			}
 		}
@@ -205,18 +195,16 @@ ParallaxScatters-UPGRADED
 			Material
 			{
 				shader = Custom/ParallaxInstancedSolid
-				_MainTex = Parallax_StockScatterTextures/Textures/Gilly/PluginData/low00.dds
-				_BumpMap = Parallax_StockScatterTextures/Textures/Gilly/PluginData/low01.dds
+				_MainTex = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlas.dds
 				_BumpMap = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlasnrm.dds
-				_SpecularIntensity = 0
 				_SpecularPower = 32
-				_NormalSpecularInfluence = 1
-				_Hapke = 0.349999994
-				_BumpScale = 1.5
+				_SpecularIntensity = 0
 				_FresnelPower = 3
 				_EnvironmentMapFactor = 1
-				_Color = 0.949999988,1,1,1
+				_BumpScale = 1.5
+				_Hapke = 0.349999994
 				_FresnelColor = 0.150000006,0.150000006,0.150000006,1
+				_Color = 0.949999988,1,1,1
 				_CullMode = 2
 				Keywords
 				{
@@ -224,10 +212,10 @@ ParallaxScatters-UPGRADED
 			}
 			Distribution
 			{
-				seed = 3
+				seed = 3.11999989
 				spawnChance = 1
-				range = 300
-				populationMultiplier = 3
+				range = 650
+				populationMultiplier = 7
 				minScale = 0.100000001,0.100000001,0.100000001
 				maxScale = 0.200000003,0.200000003,0.200000003
 				scaleRandomness = 0.5
@@ -235,7 +223,7 @@ ParallaxScatters-UPGRADED
 				steepPower = 1.5
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.5
+				maxNormalDeviance = 0.500000715
 				minAltitude = -1000
 				maxAltitude = 100000
 				altitudeFadeRange = 10
@@ -260,19 +248,16 @@ ParallaxScatters-UPGRADED
 						}
 					}
 				}
-				BiomeBlacklist
-				{
-				}
 			}
 		}
 		Scatter
 		{
 			name = MedRocksVar3
-			model = Parallax_StockScatterTextures/Models/Gilly/medvar3lod0
+			model = Parallax_StockScatterTextures/Models/Mun/clustermed
 			collisionLevel = 2
 			Optimizations
 			{
-				frustumCullingStartRange = 50
+				frustumCullingStartRange = 50.0000038
 				frustumCullingScreenMargin = -40
 				maxObjects = 10000
 			}
@@ -292,18 +277,16 @@ ParallaxScatters-UPGRADED
 			Material
 			{
 				shader = Custom/ParallaxInstancedSolid
-				_MainTex = Parallax_StockScatterTextures/Textures/Gilly/PluginData/low00.dds
-				_BumpMap = Parallax_StockScatterTextures/Textures/Gilly/PluginData/low01.dds
+				_MainTex = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlas.dds
 				_BumpMap = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlasnrm.dds
-				_SpecularIntensity = 0
 				_SpecularPower = 32
-				_NormalSpecularInfluence = 1
-				_Hapke = 0.349999994
-				_BumpScale = 1.5
+				_SpecularIntensity = 0
 				_FresnelPower = 3
 				_EnvironmentMapFactor = 1
-				_Color = 0.949999988,1,1,1
+				_BumpScale = 1.5
+				_Hapke = 0.349999994
 				_FresnelColor = 0.150000006,0.150000006,0.150000006,1
+				_Color = 0.949999988,1,1,1
 				_CullMode = 2
 				Keywords
 				{
@@ -311,8 +294,8 @@ ParallaxScatters-UPGRADED
 			}
 			Distribution
 			{
-				seed = 5
-				spawnChance = 1
+				seed = 5.30000019
+				spawnChance = 0.75
 				range = 1500
 				populationMultiplier = 2
 				minScale = 0.100000001,0.100000001,0.100000001
@@ -322,7 +305,7 @@ ParallaxScatters-UPGRADED
 				steepPower = 1.5
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.5
+				maxNormalDeviance = 0.368404269
 				minAltitude = -1000
 				maxAltitude = 100000
 				altitudeFadeRange = 10
@@ -332,7 +315,7 @@ ParallaxScatters-UPGRADED
 				{
 					LOD
 					{
-						model = Parallax_StockScatterTextures/Models/Gilly/medvar3lod1
+						model = Parallax_StockScatterTextures/Models/Mun/clustermed2
 						range = 60
 						MaterialOverride
 						{
@@ -340,15 +323,12 @@ ParallaxScatters-UPGRADED
 					}
 					LOD
 					{
-						model = Parallax_StockScatterTextures/Models/Gilly/medvar3lod2
+						model = Parallax_StockScatterTextures/Models/Mun/clustermed3
 						range = 120
 						MaterialOverride
 						{
 						}
 					}
-				}
-				BiomeBlacklist
-				{
 				}
 			}
 		}
@@ -379,18 +359,16 @@ ParallaxScatters-UPGRADED
 			Material
 			{
 				shader = Custom/ParallaxInstancedSolid
-				_MainTex = Parallax_StockScatterTextures/Textures/Gilly/PluginData/low00.dds
-				_BumpMap = Parallax_StockScatterTextures/Textures/Gilly/PluginData/low01.dds
+				_MainTex = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlas.dds
 				_BumpMap = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlasnrm.dds
-				_SpecularIntensity = 0
 				_SpecularPower = 32
-				_NormalSpecularInfluence = 1
-				_Hapke = 0.349999994
-				_BumpScale = 1.5
+				_SpecularIntensity = 0
 				_FresnelPower = 3
 				_EnvironmentMapFactor = 1
-				_Color = 0.949999988,1,1,1
+				_BumpScale = 1.5
+				_Hapke = 0.349999994
 				_FresnelColor = 0.150000006,0.150000006,0.150000006,1
+				_Color = 0.949999988,1,1,1
 				_CullMode = 2
 				Keywords
 				{
@@ -398,10 +376,10 @@ ParallaxScatters-UPGRADED
 			}
 			Distribution
 			{
-				seed = 7
+				seed = 7.9000001
 				spawnChance = 0.5
 				range = 2400
-				populationMultiplier = 1
+				populationMultiplier = 3
 				minScale = 0.100000001,0.100000001,0.100000001
 				maxScale = 0.5,0.5,0.5
 				scaleRandomness = 0.5
@@ -409,7 +387,7 @@ ParallaxScatters-UPGRADED
 				steepPower = 1.5
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.5
+				maxNormalDeviance = 0.500000775
 				minAltitude = -1000
 				maxAltitude = 100000
 				altitudeFadeRange = 10
@@ -434,15 +412,12 @@ ParallaxScatters-UPGRADED
 						}
 					}
 				}
-				BiomeBlacklist
-				{
-				}
 			}
 		}
 		Scatter
 		{
 			name = LargeRocksVar2
-			model = Parallax_StockScatterTextures/Models/Gilly/largevar2lod0
+			model = Parallax_StockScatterTextures/Models/Mun/clusterlarge
 			collisionLevel = 3
 			Optimizations
 			{
@@ -466,18 +441,16 @@ ParallaxScatters-UPGRADED
 			Material
 			{
 				shader = Custom/ParallaxInstancedSolid
-				_MainTex = Parallax_StockScatterTextures/Textures/Gilly/PluginData/low00.dds
-				_BumpMap = Parallax_StockScatterTextures/Textures/Gilly/PluginData/low01.dds
+				_MainTex = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlas.dds
 				_BumpMap = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlasnrm.dds
-				_SpecularIntensity = 0
 				_SpecularPower = 32
-				_NormalSpecularInfluence = 1
-				_Hapke = 0.349999994
-				_BumpScale = 1.5
+				_SpecularIntensity = 0
 				_FresnelPower = 3
 				_EnvironmentMapFactor = 1
-				_Color = 0.949999988,1,1,1
+				_BumpScale = 1.5
+				_Hapke = 0.349999994
 				_FresnelColor = 0.150000006,0.150000006,0.150000006,1
+				_Color = 0.949999988,1,1,1
 				_CullMode = 2
 				Keywords
 				{
@@ -485,8 +458,8 @@ ParallaxScatters-UPGRADED
 			}
 			Distribution
 			{
-				seed = 8
-				spawnChance = 0.400000006
+				seed = 8.10000038
+				spawnChance = 0.5
 				range = 2400
 				populationMultiplier = 1
 				minScale = 0.100000001,0.100000001,0.100000001
@@ -496,7 +469,7 @@ ParallaxScatters-UPGRADED
 				steepPower = 1.5
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.5
+				maxNormalDeviance = 0.500000775
 				minAltitude = -1000
 				maxAltitude = 100000
 				altitudeFadeRange = 10
@@ -506,7 +479,7 @@ ParallaxScatters-UPGRADED
 				{
 					LOD
 					{
-						model = Parallax_StockScatterTextures/Models/Gilly/largevar2lod1
+						model = Parallax_StockScatterTextures/Models/Mun/clusterlarge2
 						range = 120
 						MaterialOverride
 						{
@@ -514,22 +487,19 @@ ParallaxScatters-UPGRADED
 					}
 					LOD
 					{
-						model = Parallax_StockScatterTextures/Models/Gilly/largevar2lod2
+						model = Parallax_StockScatterTextures/Models/Mun/clusterlarge3
 						range = 240
 						MaterialOverride
 						{
 						}
 					}
 				}
-				BiomeBlacklist
-				{
-				}
 			}
 		}
 		Scatter
 		{
 			name = LargeRocksVar3
-			model = Parallax_StockScatterTextures/Models/Gilly/largevar3lod0
+			model = Parallax_StockScatterTextures/Models/Mun/clusterhuge
 			collisionLevel = 3
 			Optimizations
 			{
@@ -553,18 +523,16 @@ ParallaxScatters-UPGRADED
 			Material
 			{
 				shader = Custom/ParallaxInstancedSolid
-				_MainTex = Parallax_StockScatterTextures/Textures/Gilly/PluginData/low00.dds
-				_BumpMap = Parallax_StockScatterTextures/Textures/Gilly/PluginData/low01.dds
+				_MainTex = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlas.dds
 				_BumpMap = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlasnrm.dds
-				_SpecularIntensity = 0
 				_SpecularPower = 32
-				_NormalSpecularInfluence = 1
-				_Hapke = 0.349999994
-				_BumpScale = 1.5
+				_SpecularIntensity = 0
 				_FresnelPower = 3
 				_EnvironmentMapFactor = 1
-				_Color = 0.949999988,1,1,1
+				_BumpScale = 1.5
+				_Hapke = 0.349999994
 				_FresnelColor = 0.150000006,0.150000006,0.150000006,1
+				_Color = 0.949999988,1,1,1
 				_CullMode = 2
 				Keywords
 				{
@@ -572,10 +540,10 @@ ParallaxScatters-UPGRADED
 			}
 			Distribution
 			{
-				seed = 10
+				seed = 10.1999998
 				spawnChance = 0.300000012
 				range = 2700
-				populationMultiplier = 1
+				populationMultiplier = 2
 				minScale = 0.100000001,0.100000001,0.100000001
 				maxScale = 0.400000006,0.400000006,0.400000006
 				scaleRandomness = 0.5
@@ -583,7 +551,7 @@ ParallaxScatters-UPGRADED
 				steepPower = 1.5
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.5
+				maxNormalDeviance = 0.500000775
 				minAltitude = -1000
 				maxAltitude = 100000
 				altitudeFadeRange = 10
@@ -593,7 +561,7 @@ ParallaxScatters-UPGRADED
 				{
 					LOD
 					{
-						model = Parallax_StockScatterTextures/Models/Gilly/largevar3lod1
+						model = Parallax_StockScatterTextures/Models/Mun/clusterhuge2
 						range = 120
 						MaterialOverride
 						{
@@ -601,22 +569,19 @@ ParallaxScatters-UPGRADED
 					}
 					LOD
 					{
-						model = Parallax_StockScatterTextures/Models/Gilly/largevar3lod2
+						model = Parallax_StockScatterTextures/Models/Mun/clusterhuge3
 						range = 240
 						MaterialOverride
 						{
 						}
 					}
 				}
-				BiomeBlacklist
-				{
-				}
 			}
 		}
 		Scatter
 		{
 			name = GiantRocks1
-			model = Parallax_StockScatterTextures/Models/Gilly/largevar2lod0
+			model = Parallax_StockScatterTextures/Models/Dres/largevar2lod0
 			collisionLevel = 2
 			Optimizations
 			{
@@ -640,18 +605,16 @@ ParallaxScatters-UPGRADED
 			Material
 			{
 				shader = Custom/ParallaxInstancedSolid
-				_MainTex = Parallax_StockScatterTextures/Textures/Gilly/PluginData/low00.dds
-				_BumpMap = Parallax_StockScatterTextures/Textures/Gilly/PluginData/low01.dds
+				_MainTex = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlas.dds
 				_BumpMap = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlasnrm.dds
-				_SpecularIntensity = 0
 				_SpecularPower = 32
-				_NormalSpecularInfluence = 1
-				_Hapke = 0.349999994
-				_BumpScale = 1.5
+				_SpecularIntensity = 0
 				_FresnelPower = 3
 				_EnvironmentMapFactor = 1
-				_Color = 0.949999988,1,1,1
+				_BumpScale = 1.5
+				_Hapke = 0.349999994
 				_FresnelColor = 0.150000006,0.150000006,0.150000006,1
+				_Color = 0.949999988,1,1,1
 				_CullMode = 2
 				Keywords
 				{
@@ -660,17 +623,17 @@ ParallaxScatters-UPGRADED
 			Distribution
 			{
 				seed = 8
-				spawnChance = 0.100000001
+				spawnChance = 0.200000003
 				range = 3500
 				populationMultiplier = 1
-				minScale = 0.699999988,0.699999988,0.699999988
-				maxScale = 1,1,1
+				minScale = 0.200000003,0.200000003,0.200000003
+				maxScale = 0.300000012,0.300000012,0.300000012
 				scaleRandomness = 0.5
-				cutoffScale = 0.699999988
+				cutoffScale = 0.300000012
 				steepPower = 1.5
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.5
+				maxNormalDeviance = 0.500000775
 				minAltitude = -1000
 				maxAltitude = 100000
 				altitudeFadeRange = 10
@@ -680,7 +643,7 @@ ParallaxScatters-UPGRADED
 				{
 					LOD
 					{
-						model = Parallax_StockScatterTextures/Models/Gilly/largevar2lod1
+						model = Parallax_StockScatterTextures/Models/Dres/largevar2lod1
 						range = 600
 						MaterialOverride
 						{
@@ -688,22 +651,19 @@ ParallaxScatters-UPGRADED
 					}
 					LOD
 					{
-						model = Parallax_StockScatterTextures/Models/Gilly/largevar2lod2
+						model = Parallax_StockScatterTextures/Models/Dres/largevar2lod2
 						range = 1200
 						MaterialOverride
 						{
 						}
 					}
 				}
-				BiomeBlacklist
-				{
-				}
 			}
 		}
 		Scatter
 		{
 			name = GiantRocks2
-			model = Parallax_StockScatterTextures/Models/Gilly/medvar3lod0
+			model = Parallax_StockScatterTextures/Models/Mun/large5lod0
 			collisionLevel = 2
 			Optimizations
 			{
@@ -727,18 +687,16 @@ ParallaxScatters-UPGRADED
 			Material
 			{
 				shader = Custom/ParallaxInstancedSolid
-				_MainTex = Parallax_StockScatterTextures/Textures/Gilly/PluginData/low00.dds
-				_BumpMap = Parallax_StockScatterTextures/Textures/Gilly/PluginData/low01.dds
+				_MainTex = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlas.dds
 				_BumpMap = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlasnrm.dds
-				_SpecularIntensity = 0
 				_SpecularPower = 32
-				_NormalSpecularInfluence = 1
-				_Hapke = 0.349999994
-				_BumpScale = 1.5
+				_SpecularIntensity = 0
 				_FresnelPower = 3
 				_EnvironmentMapFactor = 1
-				_Color = 0.949999988,1,1,1
+				_BumpScale = 1.5
+				_Hapke = 0.349999994
 				_FresnelColor = 0.150000006,0.150000006,0.150000006,1
+				_Color = 0.949999988,1,1,1
 				_CullMode = 2
 				Keywords
 				{
@@ -746,18 +704,18 @@ ParallaxScatters-UPGRADED
 			}
 			Distribution
 			{
-				seed = 5
+				seed = 5.19999981
 				spawnChance = 0.100000001
 				range = 3800
 				populationMultiplier = 1
-				minScale = 1,1,1
-				maxScale = 2,2,2
+				minScale = 0.5,0.5,0.5
+				maxScale = 0.75,0.75,0.75
 				scaleRandomness = 0.5
-				cutoffScale = 0.699999988
+				cutoffScale = 0.5
 				steepPower = 1.5
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.5
+				maxNormalDeviance = 0.500000775
 				minAltitude = -1000
 				maxAltitude = 100000
 				altitudeFadeRange = 10
@@ -767,7 +725,7 @@ ParallaxScatters-UPGRADED
 				{
 					LOD
 					{
-						model = Parallax_StockScatterTextures/Models/Gilly/medvar3lod1
+						model = Parallax_StockScatterTextures/Models/Mun/large5lod1
 						range = 300
 						MaterialOverride
 						{
@@ -775,15 +733,12 @@ ParallaxScatters-UPGRADED
 					}
 					LOD
 					{
-						model = Parallax_StockScatterTextures/Models/Gilly/medvar3lod2
+						model = Parallax_StockScatterTextures/Models/Mun/large5lod2
 						range = 600
 						MaterialOverride
 						{
 						}
 					}
-				}
-				BiomeBlacklist
-				{
 				}
 			}
 		}
