--- a/GameData/OuterParallax/OPM/_Scatters/Configs_C/Tekto.cfg
+++ b/GameData/OuterParallax/OPM/_Scatters/Configs_C/Tekto.cfg
@@ -1,8 +1,8 @@
-ParallaxScatters-UPGRADED
+ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,OPM]
 {
 	Body
 	{
-		name = Tekto // To activate this config, replace ParallaxScatters-UPGRADED with ParallaxScatters
+		name = Tekto
 		configVersion = 2
 		Scatter
 		{
@@ -546,7 +546,7 @@ ParallaxScatters-UPGRADED
 					}
 					LOD
 					{
-						model = Parallax_StockScatterTextures/Models/Kerbin/bettergrassUV4
+						model = Parallax_StockScatterTextures/Models/Kerbin/bettergrassUV2
 						range = 80
 						MaterialOverride
 						{
@@ -1129,7 +1129,7 @@ ParallaxScatters-UPGRADED
 					}
 					LOD
 					{
-						model = Parallax_StockScatterTextures/Models/Kerbin/bettergrassUV4
+						model = Parallax_StockScatterTextures/Models/Kerbin/bettergrassUV2
 						range = 80
 						MaterialOverride
 						{
@@ -1472,7 +1472,7 @@ ParallaxScatters-UPGRADED
 					}
 					LOD
 					{
-						model = Parallax_StockScatterTextures/Models/Kerbin/bettergrassUV4
+						model = Parallax_StockScatterTextures/Models/Kerbin/bettergrassUV2
 						range = 80
 						MaterialOverride
 						{
@@ -1868,7 +1868,7 @@ ParallaxScatters-UPGRADED
 					}
 					LOD
 					{
-						model = Parallax_StockScatterTextures/Models/Kerbin/bettergrassUV4
+						model = Parallax_StockScatterTextures/Models/Kerbin/bettergrassUV2
 						range = 80
 						MaterialOverride
 						{
