--- a/GameData/OuterParallax/OPM/_Scatters/Configs_C/Wal.cfg
+++ b/GameData/OuterParallax/OPM/_Scatters/Configs_C/Wal.cfg
@@ -1,8 +1,8 @@
-ParallaxScatters-UPGRADED
+ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,OPM]
 {
 	Body
 	{
-		name = Wal // To activate this config, replace ParallaxScatters-UPGRADED with ParallaxScatters
+		name = Wal
 		configVersion = 2
 		Scatter
 		{
@@ -33,15 +33,14 @@ ParallaxScatters-UPGRADED
 				shader = Custom/ParallaxInstancedSolid
 				_MainTex = Parallax_StockScatterTextures/Textures/Dres/PluginData/rockatlas.dds
 				_BumpMap = Parallax_StockScatterTextures/Textures/Dres/PluginData/rockatlasnrm.dds
-				_SpecularIntensity = 0.0813980028
 				_SpecularPower = 40
-				_NormalSpecularInfluence = 1
-				_Hapke = 0.300000012
-				_BumpScale = 1
+				_SpecularIntensity = 0.0813980028
 				_FresnelPower = 4
 				_EnvironmentMapFactor = 1
-				_Color = 1.10000002,0.879999995,0.550000012,1
+				_BumpScale = 1
+				_Hapke = 0.300000012
 				_FresnelColor = 0.0799999982,0.0799999982,0.0799999982,1
+				_Color = 1.10000002,0.879999995,0.550000012,1
 				_CullMode = 2
 				Keywords
 				{
@@ -52,7 +51,7 @@ ParallaxScatters-UPGRADED
 				seed = 0
 				spawnChance = 1
 				range = 150
-				populationMultiplier = 100
+				populationMultiplier = 120
 				minScale = 0.100000001,0.100000001,0.100000001
 				maxScale = 0.200000003,0.200000003,0.200000003
 				scaleRandomness = 0.5
@@ -60,7 +59,7 @@ ParallaxScatters-UPGRADED
 				steepPower = 8
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.219999999
+				maxNormalDeviance = 0.220000342
 				minAltitude = -1000
 				maxAltitude = 100000
 				altitudeFadeRange = 10
@@ -85,15 +84,12 @@ ParallaxScatters-UPGRADED
 						}
 					}
 				}
-				BiomeBlacklist
-				{
-				}
 			}
 		}
 		Scatter
 		{
 			name = SmallRocksVar2
-			model = Parallax_StockScatterTextures/Models/Gilly/smallvar2lod0
+			model = Parallax_StockScatterTextures/Models/Gilly/smallvar1lod0
 			collisionLevel = 1
 			Optimizations
 			{
@@ -119,15 +115,14 @@ ParallaxScatters-UPGRADED
 				shader = Custom/ParallaxInstancedSolid
 				_MainTex = Parallax_StockScatterTextures/Textures/Dres/PluginData/rockatlas.dds
 				_BumpMap = Parallax_StockScatterTextures/Textures/Dres/PluginData/rockatlasnrm.dds
-				_SpecularIntensity = 0.0813980028
 				_SpecularPower = 40
-				_NormalSpecularInfluence = 1
-				_Hapke = 0.300000012
-				_BumpScale = 1
+				_SpecularIntensity = 0.0813980028
 				_FresnelPower = 4
 				_EnvironmentMapFactor = 1
-				_Color = 1.10000002,0.879999995,0.550000012,1
+				_BumpScale = 1
+				_Hapke = 0.300000012
 				_FresnelColor = 0.0799999982,0.0799999982,0.0799999982,1
+				_Color = 1.10000002,0.879999995,0.550000012,1
 				_CullMode = 2
 				Keywords
 				{
@@ -137,8 +132,8 @@ ParallaxScatters-UPGRADED
 			{
 				seed = 1
 				spawnChance = 1
-				range = 100
-				populationMultiplier = 65
+				range = 150
+				populationMultiplier = 85
 				minScale = 0.100000001,0.100000001,0.100000001
 				maxScale = 0.200000003,0.200000003,0.200000003
 				scaleRandomness = 0.5
@@ -146,7 +141,7 @@ ParallaxScatters-UPGRADED
 				steepPower = 8
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.219999999
+				maxNormalDeviance = 0.220000342
 				minAltitude = -1000
 				maxAltitude = 100000
 				altitudeFadeRange = 10
@@ -156,7 +151,7 @@ ParallaxScatters-UPGRADED
 				{
 					LOD
 					{
-						model = Parallax_StockScatterTextures/Models/Gilly/smallvar2lod1
+						model = Parallax_StockScatterTextures/Models/Gilly/smallvar1lod1
 						range = 15
 						MaterialOverride
 						{
@@ -164,15 +159,12 @@ ParallaxScatters-UPGRADED
 					}
 					LOD
 					{
-						model = Parallax_StockScatterTextures/Models/Gilly/smallvar2lod2
+						model = Parallax_StockScatterTextures/Models/Gilly/smallvar1lod2
 						range = 30
 						MaterialOverride
 						{
 						}
 					}
-				}
-				BiomeBlacklist
-				{
 				}
 			}
 		}
@@ -205,15 +197,14 @@ ParallaxScatters-UPGRADED
 				shader = Custom/ParallaxInstancedSolid
 				_MainTex = Parallax_StockScatterTextures/Textures/Dres/PluginData/rockatlas.dds
 				_BumpMap = Parallax_StockScatterTextures/Textures/Dres/PluginData/rockatlasnrm.dds
-				_SpecularIntensity = 0.0813980028
 				_SpecularPower = 40
-				_NormalSpecularInfluence = 1
-				_Hapke = 0.300000012
-				_BumpScale = 1
+				_SpecularIntensity = 0.0813980028
 				_FresnelPower = 4
 				_EnvironmentMapFactor = 1
-				_Color = 1.10000002,0.879999995,0.550000012,1
+				_BumpScale = 1
+				_Hapke = 0.300000012
 				_FresnelColor = 0.0799999982,0.0799999982,0.0799999982,1
+				_Color = 1.10000002,0.879999995,0.550000012,1
 				_CullMode = 2
 				Keywords
 				{
@@ -223,8 +214,8 @@ ParallaxScatters-UPGRADED
 			{
 				seed = 3
 				spawnChance = 1
-				range = 300
-				populationMultiplier = 22
+				range = 650
+				populationMultiplier = 32
 				minScale = 0.100000001,0.100000001,0.100000001
 				maxScale = 0.200000003,0.200000003,0.200000003
 				scaleRandomness = 0.5
@@ -232,7 +223,7 @@ ParallaxScatters-UPGRADED
 				steepPower = 8
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.219999999
+				maxNormalDeviance = 0.220000342
 				minAltitude = -1000
 				maxAltitude = 100000
 				altitudeFadeRange = 10
@@ -257,15 +248,12 @@ ParallaxScatters-UPGRADED
 						}
 					}
 				}
-				BiomeBlacklist
-				{
-				}
 			}
 		}
 		Scatter
 		{
 			name = MedRocksVar2
-			model = Parallax_StockScatterTextures/Models/Gilly/medvar2lod0
+			model = Parallax_StockScatterTextures/Models/Gilly/medvar1lod0
 			collisionLevel = 2
 			Optimizations
 			{
@@ -291,15 +279,14 @@ ParallaxScatters-UPGRADED
 				shader = Custom/ParallaxInstancedSolid
 				_MainTex = Parallax_StockScatterTextures/Textures/Dres/PluginData/rockatlas.dds
 				_BumpMap = Parallax_StockScatterTextures/Textures/Dres/PluginData/rockatlasnrm.dds
-				_SpecularIntensity = 0.0813980028
 				_SpecularPower = 40
-				_NormalSpecularInfluence = 1
-				_Hapke = 0.300000012
-				_BumpScale = 1
+				_SpecularIntensity = 0.0813980028
 				_FresnelPower = 4
 				_EnvironmentMapFactor = 1
-				_Color = 1.10000002,0.879999995,0.550000012,1
+				_BumpScale = 1
+				_Hapke = 0.300000012
 				_FresnelColor = 0.0799999982,0.0799999982,0.0799999982,1
+				_Color = 1.10000002,0.879999995,0.550000012,1
 				_CullMode = 2
 				Keywords
 				{
@@ -309,8 +296,8 @@ ParallaxScatters-UPGRADED
 			{
 				seed = 4
 				spawnChance = 1
-				range = 400
-				populationMultiplier = 19
+				range = 650
+				populationMultiplier = 24
 				minScale = 0.100000001,0.100000001,0.100000001
 				maxScale = 0.200000003,0.200000003,0.200000003
 				scaleRandomness = 0.5
@@ -318,7 +305,7 @@ ParallaxScatters-UPGRADED
 				steepPower = 8
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.219999999
+				maxNormalDeviance = 0.220000342
 				minAltitude = -1000
 				maxAltitude = 100000
 				altitudeFadeRange = 10
@@ -328,7 +315,7 @@ ParallaxScatters-UPGRADED
 				{
 					LOD
 					{
-						model = Parallax_StockScatterTextures/Models/Gilly/medvar2lod1
+						model = Parallax_StockScatterTextures/Models/Gilly/medvar1lod1
 						range = 40
 						MaterialOverride
 						{
@@ -336,22 +323,19 @@ ParallaxScatters-UPGRADED
 					}
 					LOD
 					{
-						model = Parallax_StockScatterTextures/Models/Gilly/medvar2lod2
+						model = Parallax_StockScatterTextures/Models/Gilly/medvar1lod2
 						range = 100
 						MaterialOverride
 						{
 						}
 					}
 				}
-				BiomeBlacklist
-				{
-				}
 			}
 		}
 		Scatter
 		{
 			name = MedRocksVar3
-			model = Parallax_StockScatterTextures/Models/Gilly/medvar3lod0
+			model = Parallax_StockScatterTextures/Models/Gilly/medvar1lod0
 			collisionLevel = 2
 			Optimizations
 			{
@@ -377,15 +361,14 @@ ParallaxScatters-UPGRADED
 				shader = Custom/ParallaxInstancedSolid
 				_MainTex = Parallax_StockScatterTextures/Textures/Dres/PluginData/rockatlas.dds
 				_BumpMap = Parallax_StockScatterTextures/Textures/Dres/PluginData/rockatlasnrm.dds
-				_SpecularIntensity = 0.0813980028
 				_SpecularPower = 40
-				_NormalSpecularInfluence = 1
-				_Hapke = 0.300000012
-				_BumpScale = 1
+				_SpecularIntensity = 0.0813980028
 				_FresnelPower = 4
 				_EnvironmentMapFactor = 1
-				_Color = 1.10000002,0.879999995,0.550000012,1
+				_BumpScale = 1
+				_Hapke = 0.300000012
 				_FresnelColor = 0.0799999982,0.0799999982,0.0799999982,1
+				_Color = 1.10000002,0.879999995,0.550000012,1
 				_CullMode = 2
 				Keywords
 				{
@@ -396,7 +379,7 @@ ParallaxScatters-UPGRADED
 				seed = 5
 				spawnChance = 0.600000024
 				range = 900
-				populationMultiplier = 8
+				populationMultiplier = 12
 				minScale = 0.100000001,0.100000001,0.100000001
 				maxScale = 0.400000006,0.400000006,0.400000006
 				scaleRandomness = 0.5
@@ -404,7 +387,7 @@ ParallaxScatters-UPGRADED
 				steepPower = 8
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.219999999
+				maxNormalDeviance = 0.220000342
 				minAltitude = -1000
 				maxAltitude = 100000
 				altitudeFadeRange = 10
@@ -414,23 +397,20 @@ ParallaxScatters-UPGRADED
 				{
 					LOD
 					{
-						model = Parallax_StockScatterTextures/Models/Gilly/medvar3lod1
-						range = 60
+						model = Parallax_StockScatterTextures/Models/Gilly/medvar1lod1
+						range = 60.0000038
 						MaterialOverride
 						{
 						}
 					}
 					LOD
 					{
-						model = Parallax_StockScatterTextures/Models/Gilly/medvar3lod2
-						range = 120
+						model = Parallax_StockScatterTextures/Models/Gilly/medvar1lod2
+						range = 120.000008
 						MaterialOverride
 						{
 						}
 					}
-				}
-				BiomeBlacklist
-				{
 				}
 			}
 		}
@@ -463,15 +443,14 @@ ParallaxScatters-UPGRADED
 				shader = Custom/ParallaxInstancedSolid
 				_MainTex = Parallax_StockScatterTextures/Textures/Dres/PluginData/rockatlas.dds
 				_BumpMap = Parallax_StockScatterTextures/Textures/Dres/PluginData/rockatlasnrm.dds
-				_SpecularIntensity = 0.0813980028
 				_SpecularPower = 40
-				_NormalSpecularInfluence = 1
-				_Hapke = 0.300000012
-				_BumpScale = 1
+				_SpecularIntensity = 0.0813980028
 				_FresnelPower = 4
 				_EnvironmentMapFactor = 1
-				_Color = 1.10000002,0.879999995,0.550000012,1
+				_BumpScale = 1
+				_Hapke = 0.300000012
 				_FresnelColor = 0.0799999982,0.0799999982,0.0799999982,1
+				_Color = 1.10000002,0.879999995,0.550000012,1
 				_CullMode = 2
 				Keywords
 				{
@@ -482,7 +461,7 @@ ParallaxScatters-UPGRADED
 				seed = 7
 				spawnChance = 1
 				range = 2000
-				populationMultiplier = 11
+				populationMultiplier = 14
 				minScale = 0.100000001,0.100000001,0.100000001
 				maxScale = 0.5,0.5,0.5
 				scaleRandomness = 0.5
@@ -490,7 +469,7 @@ ParallaxScatters-UPGRADED
 				steepPower = 8
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.219999999
+				maxNormalDeviance = 0.220000342
 				minAltitude = -1000
 				maxAltitude = 100000
 				altitudeFadeRange = 10
@@ -515,15 +494,12 @@ ParallaxScatters-UPGRADED
 						}
 					}
 				}
-				BiomeBlacklist
-				{
-				}
 			}
 		}
 		Scatter
 		{
 			name = LargeRocksVar2
-			model = Parallax_StockScatterTextures/Models/Gilly/largevar2lod0
+			model = Parallax_StockScatterTextures/Models/Gilly/largevar1lod0
 			collisionLevel = 3
 			Optimizations
 			{
@@ -549,15 +525,14 @@ ParallaxScatters-UPGRADED
 				shader = Custom/ParallaxInstancedSolid
 				_MainTex = Parallax_StockScatterTextures/Textures/Dres/PluginData/rockatlas.dds
 				_BumpMap = Parallax_StockScatterTextures/Textures/Dres/PluginData/rockatlasnrm.dds
-				_SpecularIntensity = 0.0813980028
 				_SpecularPower = 40
-				_NormalSpecularInfluence = 1
-				_Hapke = 0.300000012
-				_BumpScale = 1
+				_SpecularIntensity = 0.0813980028
 				_FresnelPower = 4
 				_EnvironmentMapFactor = 1
-				_Color = 1.10000002,0.879999995,0.550000012,1
+				_BumpScale = 1
+				_Hapke = 0.300000012
 				_FresnelColor = 0.0799999982,0.0799999982,0.0799999982,1
+				_Color = 1.10000002,0.879999995,0.550000012,1
 				_CullMode = 2
 				Keywords
 				{
@@ -576,7 +551,7 @@ ParallaxScatters-UPGRADED
 				steepPower = 8
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.219999999
+				maxNormalDeviance = 0.220000342
 				minAltitude = -1000
 				maxAltitude = 100000
 				altitudeFadeRange = 10
@@ -586,7 +561,7 @@ ParallaxScatters-UPGRADED
 				{
 					LOD
 					{
-						model = Parallax_StockScatterTextures/Models/Gilly/largevar2lod1
+						model = Parallax_StockScatterTextures/Models/Gilly/largevar1lod1
 						range = 120
 						MaterialOverride
 						{
@@ -594,22 +569,19 @@ ParallaxScatters-UPGRADED
 					}
 					LOD
 					{
-						model = Parallax_StockScatterTextures/Models/Gilly/largevar2lod2
+						model = Parallax_StockScatterTextures/Models/Gilly/largevar1lod2
 						range = 240
 						MaterialOverride
 						{
 						}
 					}
 				}
-				BiomeBlacklist
-				{
-				}
 			}
 		}
 		Scatter
 		{
 			name = LargeRocksVar3
-			model = Parallax_StockScatterTextures/Models/Gilly/largevar3lod0
+			model = Parallax_StockScatterTextures/Models/Gilly/largevar1lod0
 			collisionLevel = 3
 			Optimizations
 			{
@@ -635,15 +607,14 @@ ParallaxScatters-UPGRADED
 				shader = Custom/ParallaxInstancedSolid
 				_MainTex = Parallax_StockScatterTextures/Textures/Dres/PluginData/rockatlas.dds
 				_BumpMap = Parallax_StockScatterTextures/Textures/Dres/PluginData/rockatlasnrm.dds
-				_SpecularIntensity = 0.0813980028
 				_SpecularPower = 40
-				_NormalSpecularInfluence = 1
-				_Hapke = 0.300000012
-				_BumpScale = 1
+				_SpecularIntensity = 0.0813980028
 				_FresnelPower = 4
 				_EnvironmentMapFactor = 1
-				_Color = 1.10000002,0.879999995,0.550000012,1
+				_BumpScale = 1
+				_Hapke = 0.300000012
 				_FresnelColor = 0.0799999982,0.0799999982,0.0799999982,1
+				_Color = 1.10000002,0.879999995,0.550000012,1
 				_CullMode = 2
 				Keywords
 				{
@@ -662,7 +633,7 @@ ParallaxScatters-UPGRADED
 				steepPower = 8
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.219999999
+				maxNormalDeviance = 0.220000342
 				minAltitude = -1000
 				maxAltitude = 100000
 				altitudeFadeRange = 10
@@ -672,7 +643,7 @@ ParallaxScatters-UPGRADED
 				{
 					LOD
 					{
-						model = Parallax_StockScatterTextures/Models/Gilly/largevar3lod1
+						model = Parallax_StockScatterTextures/Models/Gilly/largevar1lod1
 						range = 120
 						MaterialOverride
 						{
@@ -680,15 +651,12 @@ ParallaxScatters-UPGRADED
 					}
 					LOD
 					{
-						model = Parallax_StockScatterTextures/Models/Gilly/largevar3lod2
+						model = Parallax_StockScatterTextures/Models/Gilly/largevar1lod2
 						range = 240
 						MaterialOverride
 						{
 						}
 					}
-				}
-				BiomeBlacklist
-				{
 				}
 			}
 		}
@@ -721,15 +689,14 @@ ParallaxScatters-UPGRADED
 				shader = Custom/ParallaxInstancedSolid
 				_MainTex = Parallax_StockScatterTextures/Textures/Dres/PluginData/rockatlas.dds
 				_BumpMap = Parallax_StockScatterTextures/Textures/Dres/PluginData/rockatlasnrm.dds
-				_SpecularIntensity = 0.0813980028
 				_SpecularPower = 40
-				_NormalSpecularInfluence = 1
-				_Hapke = 0.300000012
-				_BumpScale = 1
+				_SpecularIntensity = 0.0813980028
 				_FresnelPower = 4
 				_EnvironmentMapFactor = 1
-				_Color = 1.10000002,0.879999995,0.550000012,1
+				_BumpScale = 1
+				_Hapke = 0.300000012
 				_FresnelColor = 0.0799999982,0.0799999982,0.0799999982,1
+				_Color = 1.10000002,0.879999995,0.550000012,1
 				_CullMode = 2
 				Keywords
 				{
@@ -739,7 +706,7 @@ ParallaxScatters-UPGRADED
 			{
 				seed = 71
 				spawnChance = 1
-				range = 550
+				range = 650
 				populationMultiplier = 20
 				minScale = 0.100000001,0.100000001,0.100000001
 				maxScale = 0.200000003,0.200000003,0.200000003
@@ -748,7 +715,7 @@ ParallaxScatters-UPGRADED
 				steepPower = 8
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.150000006
+				maxNormalDeviance = 0.150000304
 				minAltitude = -1000
 				maxAltitude = 100000
 				altitudeFadeRange = 10
@@ -772,9 +739,6 @@ ParallaxScatters-UPGRADED
 						{
 						}
 					}
-				}
-				BiomeBlacklist
-				{
 				}
 			}
 		}
@@ -807,15 +771,14 @@ ParallaxScatters-UPGRADED
 				shader = Custom/ParallaxInstancedSolid
 				_MainTex = Parallax_StockScatterTextures/Textures/Dres/PluginData/rockatlas.dds
 				_BumpMap = Parallax_StockScatterTextures/Textures/Dres/PluginData/rockatlasnrm.dds
-				_SpecularIntensity = 0.0813980028
 				_SpecularPower = 40
-				_NormalSpecularInfluence = 1
-				_Hapke = 0.300000012
-				_BumpScale = 1
+				_SpecularIntensity = 0.0813980028
 				_FresnelPower = 4
 				_EnvironmentMapFactor = 1
-				_Color = 1.10000002,0.879999995,0.550000012,1
+				_BumpScale = 1
+				_Hapke = 0.300000012
 				_FresnelColor = 0.0799999982,0.0799999982,0.0799999982,1
+				_Color = 1.10000002,0.879999995,0.550000012,1
 				_CullMode = 2
 				Keywords
 				{
@@ -825,8 +788,8 @@ ParallaxScatters-UPGRADED
 			{
 				seed = 0
 				spawnChance = 1
-				range = 600
-				populationMultiplier = 15
+				range = 2400
+				populationMultiplier = 12
 				minScale = 0.0900000036,0.0900000036,0.0900000036
 				maxScale = 0.300000012,0.300000012,0.300000012
 				scaleRandomness = 0.5
@@ -834,7 +797,7 @@ ParallaxScatters-UPGRADED
 				steepPower = 8
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.200000003
+				maxNormalDeviance = 0.310723633
 				minAltitude = -1000
 				maxAltitude = 100000
 				altitudeFadeRange = 10
@@ -858,9 +821,6 @@ ParallaxScatters-UPGRADED
 						{
 						}
 					}
-				}
-				BiomeBlacklist
-				{
 				}
 			}
 		}
@@ -893,15 +853,14 @@ ParallaxScatters-UPGRADED
 				shader = Custom/ParallaxInstancedSolid
 				_MainTex = Parallax_StockScatterTextures/Textures/Dres/PluginData/rockatlas.dds
 				_BumpMap = Parallax_StockScatterTextures/Textures/Dres/PluginData/rockatlasnrm.dds
-				_SpecularIntensity = 0.0813980028
 				_SpecularPower = 40
-				_NormalSpecularInfluence = 1
-				_Hapke = 0.300000012
-				_BumpScale = 1
+				_SpecularIntensity = 0.0813980028
 				_FresnelPower = 4
 				_EnvironmentMapFactor = 1
-				_Color = 1.10000002,0.879999995,0.550000012,1
+				_BumpScale = 1
+				_Hapke = 0.300000012
 				_FresnelColor = 0.0799999982,0.0799999982,0.0799999982,1
+				_Color = 1.10000002,0.879999995,0.550000012,1
 				_CullMode = 2
 				Keywords
 				{
@@ -909,10 +868,10 @@ ParallaxScatters-UPGRADED
 			}
 			Distribution
 			{
-				seed = 0
+				seed = 0.300000012
 				spawnChance = 0.800000012
-				range = 600
-				populationMultiplier = 9
+				range = 3200
+				populationMultiplier = 7
 				minScale = 0.200000003,0.200000003,0.200000003
 				maxScale = 0.400000006,0.400000006,0.400000006
 				scaleRandomness = 0.5
@@ -920,7 +879,7 @@ ParallaxScatters-UPGRADED
 				steepPower = 8
 				steepContrast = 4.5
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.200000003
+				maxNormalDeviance = 0.271442115
 				minAltitude = -1000
 				maxAltitude = 100000
 				altitudeFadeRange = 10
@@ -944,9 +903,6 @@ ParallaxScatters-UPGRADED
 						{
 						}
 					}
-				}
-				BiomeBlacklist
-				{
 				}
 			}
 		}
