--- a/GameData/OuterParallax/MPE/_Scatters/Configs_C/LintMikey.cfg
+++ b/GameData/OuterParallax/MPE/_Scatters/Configs_C/LintMikey.cfg
@@ -33,15 +33,14 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				shader = Custom/ParallaxInstancedSolid
 				_MainTex = OuterParallax/_Scatters/Textures/PluginData/GillyRocks.dds
 				_BumpMap = OuterParallax/_Scatters/Textures/PluginData/GillyRocks_nrm.dds
-				_SpecularIntensity = 0.0600000024
 				_SpecularPower = 15
-				_NormalSpecularInfluence = 1
-				_Hapke = 0.35
-				_BumpScale = 1.7
+				_SpecularIntensity = 0.0600000024
 				_FresnelPower = 3
 				_EnvironmentMapFactor = 1
+				_BumpScale = 1.70000005
+				_Hapke = 0.349999994
+				_FresnelColor = 0.150000006,0.150000006,0.150000006,1
 				_Color = 1,1,1,1
-				_FresnelColor = 0.15,0.15,0.15
 				_CullMode = 2
 				Keywords
 				{
@@ -52,15 +51,15 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				seed = 0
 				spawnChance = 0.5
 				range = 150
-				populationMultiplier = 6
-				minScale = 0.3,0.3,0.3
-				maxScale = 0.6,0.6,0.6
+				populationMultiplier = 2
+				minScale = 0.300000012,0.300000012,0.300000012
+				maxScale = 0.600000024,0.600000024,0.600000024
 				scaleRandomness = 0.5
-				cutoffScale = 0.05
-				steepPower = 0.001
+				cutoffScale = 0.0500000007
+				steepPower = 0.00100000005
 				steepContrast = 4.5
-				steepMidpoint = 0.7
-				maxNormalDeviance = 0.43
+				steepMidpoint = 0.699999988
+				maxNormalDeviance = 0.430000395
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -84,9 +83,6 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 						{
 						}
 					}
-				}
-				BiomeBlacklist
-				{
 				}
 			}
 		}
@@ -119,15 +115,14 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				shader = Custom/ParallaxInstancedSolid
 				_MainTex = OuterParallax/_Scatters/Textures/PluginData/GillyRocks.dds
 				_BumpMap = OuterParallax/_Scatters/Textures/PluginData/GillyRocks_nrm.dds
-				_SpecularIntensity = 0.0600000024
 				_SpecularPower = 15
-				_NormalSpecularInfluence = 1
-				_Hapke = 0.35
-				_BumpScale = 1.7
+				_SpecularIntensity = 0.0600000024
 				_FresnelPower = 3
 				_EnvironmentMapFactor = 1
+				_BumpScale = 1.70000005
+				_Hapke = 0.349999994
+				_FresnelColor = 0.150000006,0.150000006,0.150000006,1
 				_Color = 1,1,1,1
-				_FresnelColor = 0.15,0.15,0.15
 				_CullMode = 2
 				Keywords
 				{
@@ -136,17 +131,17 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			Distribution
 			{
 				seed = 1
-				spawnChance = 0.5
+				spawnChance = 0.300000012
 				range = 150
-				populationMultiplier = 6
-				minScale = 0.3,0.3,0.3
-				maxScale = 0.6,0.6,0.6
+				populationMultiplier = 1
+				minScale = 0.300000012,0.300000012,0.300000012
+				maxScale = 0.600000024,0.600000024,0.600000024
 				scaleRandomness = 0.5
-				cutoffScale = 0.01
-				steepPower = 0.001
+				cutoffScale = 0.00999999978
+				steepPower = 0.00100000005
 				steepContrast = 4.5
-				steepMidpoint = 0.7
-				maxNormalDeviance = 0.43
+				steepMidpoint = 0.699999988
+				maxNormalDeviance = 0.430000395
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -170,9 +165,6 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 						{
 						}
 					}
-				}
-				BiomeBlacklist
-				{
 				}
 			}
 		}
@@ -205,15 +197,14 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				shader = Custom/ParallaxInstancedSolid
 				_MainTex = OuterParallax/_Scatters/Textures/PluginData/GillyRocks.dds
 				_BumpMap = OuterParallax/_Scatters/Textures/PluginData/GillyRocks_nrm.dds
-				_SpecularIntensity = 0.0600000024
 				_SpecularPower = 15
-				_NormalSpecularInfluence = 1
-				_Hapke = 0.35
-				_BumpScale = 1.7
+				_SpecularIntensity = 0.0600000024
 				_FresnelPower = 3
 				_EnvironmentMapFactor = 1
+				_BumpScale = 1.70000005
+				_Hapke = 0.349999994
+				_FresnelColor = 0.150000006,0.150000006,0.150000006,1
 				_Color = 1,1,1,1
-				_FresnelColor = 0.15,0.15,0.15
 				_CullMode = 2
 				Keywords
 				{
@@ -222,17 +213,17 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			Distribution
 			{
 				seed = 3
-				spawnChance = 0.75
+				spawnChance = 0.100000001
 				range = 650
-				populationMultiplier = 2
-				minScale = 0.3,0.3,0.3
-				maxScale = 0.6,0.6,0.6
+				populationMultiplier = 1
+				minScale = 0.300000012,0.300000012,0.300000012
+				maxScale = 0.600000024,0.600000024,0.600000024
 				scaleRandomness = 0.5
 				cutoffScale = 0.0700000003
-				steepPower = 0.001
+				steepPower = 0.00100000005
 				steepContrast = 4.5
-				steepMidpoint = 0.7
-				maxNormalDeviance = 0.43
+				steepMidpoint = 0.699999988
+				maxNormalDeviance = 0.430000395
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -256,9 +247,6 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 						{
 						}
 					}
-				}
-				BiomeBlacklist
-				{
 				}
 			}
 		}
@@ -291,15 +279,14 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				shader = Custom/ParallaxInstancedSolid
 				_MainTex = OuterParallax/_Scatters/Textures/PluginData/GillyRocks.dds
 				_BumpMap = OuterParallax/_Scatters/Textures/PluginData/GillyRocks_nrm.dds
-				_SpecularIntensity = 0.0600000024
 				_SpecularPower = 15
-				_NormalSpecularInfluence = 1
-				_Hapke = 0.35
-				_BumpScale = 1.7
+				_SpecularIntensity = 0.0600000024
 				_FresnelPower = 3
 				_EnvironmentMapFactor = 1
+				_BumpScale = 1.70000005
+				_Hapke = 0.349999994
+				_FresnelColor = 0.150000006,0.150000006,0.150000006,1
 				_Color = 1,1,1,1
-				_FresnelColor = 0.15,0.15,0.15
 				_CullMode = 2
 				Keywords
 				{
@@ -308,17 +295,17 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			Distribution
 			{
 				seed = 5
-				spawnChance = 0.75
+				spawnChance = 0.100000001
 				range = 900
-				populationMultiplier = 2
-				minScale = 0.3,0.3,0.3
-				maxScale = 0.6,0.6,0.6
+				populationMultiplier = 1
+				minScale = 0.300000012,0.300000012,0.300000012
+				maxScale = 0.600000024,0.600000024,0.600000024
 				scaleRandomness = 0.5
-				cutoffScale = 0.3
-				steepPower = 0.001
+				cutoffScale = 0.300000012
+				steepPower = 0.00100000005
 				steepContrast = 4.5
-				steepMidpoint = 0.7
-				maxNormalDeviance = 0.43
+				steepMidpoint = 0.699999988
+				maxNormalDeviance = 0.430000395
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -329,7 +316,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 					LOD
 					{
 						model = Parallax_StockScatterTextures/Models/Gilly/medvar1lod1
-						range = 60
+						range = 60.0000038
 						MaterialOverride
 						{
 						}
@@ -337,14 +324,11 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 					LOD
 					{
 						model = Parallax_StockScatterTextures/Models/Gilly/medvar1lod2
-						range = 120
+						range = 120.000008
 						MaterialOverride
 						{
 						}
 					}
-				}
-				BiomeBlacklist
-				{
 				}
 			}
 		}
@@ -377,15 +361,14 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				shader = Custom/ParallaxInstancedSolid
 				_MainTex = OuterParallax/_Scatters/Textures/PluginData/GillyRocks.dds
 				_BumpMap = OuterParallax/_Scatters/Textures/PluginData/GillyRocks_nrm.dds
-				_SpecularIntensity = 0.0600000024
 				_SpecularPower = 15
-				_NormalSpecularInfluence = 1
-				_Hapke = 0.35
-				_BumpScale = 1.7
+				_SpecularIntensity = 0.0600000024
 				_FresnelPower = 3
 				_EnvironmentMapFactor = 1
+				_BumpScale = 1.70000005
+				_Hapke = 0.349999994
+				_FresnelColor = 0.150000006,0.150000006,0.150000006,1
 				_Color = 1,1,1,1
-				_FresnelColor = 0.15,0.15,0.15
 				_CullMode = 2
 				Keywords
 				{
@@ -394,17 +377,17 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			Distribution
 			{
 				seed = 7
-				spawnChance = 0.5
+				spawnChance = 0.150000006
 				range = 2000
 				populationMultiplier = 1
-				minScale = 0.4,0.4,0.4
-				maxScale = 0.8,0.8,0.8
+				minScale = 0.400000006,0.400000006,0.400000006
+				maxScale = 0.800000012,0.800000012,0.800000012
 				scaleRandomness = 0.5
-				cutoffScale = 0.64
-				steepPower = 0.001
+				cutoffScale = 0.639999986
+				steepPower = 0.00100000005
 				steepContrast = 4.5
-				steepMidpoint = 0.7
-				maxNormalDeviance = 0.43
+				steepMidpoint = 0.699999988
+				maxNormalDeviance = 0.430000782
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -429,15 +412,12 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 						}
 					}
 				}
-				BiomeBlacklist
-				{
-				}
 			}
 		}
 		Scatter
 		{
 			name = LargeRocksVar2
-			model = Parallax_StockScatterTextures/Models/Gilly/largevar1lod0
+			model = Parallax_StockScatterTextures/Models/Dres/largevar2lod0
 			collisionLevel = 2
 			Optimizations
 			{
@@ -463,15 +443,14 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				shader = Custom/ParallaxInstancedSolid
 				_MainTex = OuterParallax/_Scatters/Textures/PluginData/GillyRocks.dds
 				_BumpMap = OuterParallax/_Scatters/Textures/PluginData/GillyRocks_nrm.dds
-				_SpecularIntensity = 0.0600000024
 				_SpecularPower = 15
-				_NormalSpecularInfluence = 1
-				_Hapke = 0.35
-				_BumpScale = 1.7
+				_SpecularIntensity = 0.0600000024
 				_FresnelPower = 3
 				_EnvironmentMapFactor = 1
+				_BumpScale = 1.70000005
+				_Hapke = 0.349999994
+				_FresnelColor = 0.150000006,0.150000006,0.150000006,1
 				_Color = 1,1,1,1
-				_FresnelColor = 0.15,0.15,0.15
 				_CullMode = 2
 				Keywords
 				{
@@ -480,17 +459,17 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			Distribution
 			{
 				seed = 8
-				spawnChance = 0.4
+				spawnChance = 0.150000006
 				range = 2000
 				populationMultiplier = 1
-				minScale = 0.4,0.4,0.4
-				maxScale = 0.8,0.8,0.8
+				minScale = 0.150000006,0.150000006,0.150000006
+				maxScale = 0.25,0.25,0.25
 				scaleRandomness = 0.5
-				cutoffScale = 0.64
-				steepPower = 0.001
+				cutoffScale = 0.639999986
+				steepPower = 0.00100000005
 				steepContrast = 4.5
-				steepMidpoint = 0.7
-				maxNormalDeviance = 0.43
+				steepMidpoint = 0.699999988
+				maxNormalDeviance = 0.430000782
 				minAltitude = -1000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
@@ -500,7 +479,7 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				{
 					LOD
 					{
-						model = Parallax_StockScatterTextures/Models/Gilly/largevar1lod1
+						model = Parallax_StockScatterTextures/Models/Dres/largevar2lod1
 						range = 120
 						MaterialOverride
 						{
@@ -508,15 +487,12 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 					}
 					LOD
 					{
-						model = Parallax_StockScatterTextures/Models/Gilly/largevar1lod2
+						model = Parallax_StockScatterTextures/Models/Dres/largevar2lod2
 						range = 240
 						MaterialOverride
 						{
 						}
 					}
-				}
-				BiomeBlacklist
-				{
 				}
 			}
 		}
@@ -549,15 +525,14 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 				shader = Custom/ParallaxInstancedSolid
 				_MainTex = OuterParallax/_Scatters/Textures/PluginData/GillyRocks.dds
 				_BumpMap = OuterParallax/_Scatters/Textures/PluginData/GillyRocks_nrm.dds
-				_SpecularIntensity = 0.0600000024
 				_SpecularPower = 15
-				_NormalSpecularInfluence = 1
-				_Hapke = 0.35
-				_BumpScale = 1.7
+				_SpecularIntensity = 0.0600000024
 				_FresnelPower = 3
 				_EnvironmentMapFactor = 1
+				_BumpScale = 1.70000005
+				_Hapke = 0.349999994
+				_FresnelColor = 0.150000006,0.150000006,0.150000006,1
 				_Color = 1,1,1,1
-				_FresnelColor = 0.15,0.15,0.15
 				_CullMode = 2
 				Keywords
 				{
@@ -566,18 +541,18 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 			Distribution
 			{
 				seed = 10
-				spawnChance = 0.3
+				spawnChance = 0.100000001
 				range = 2000
 				populationMultiplier = 1
-				minScale = 0.4,0.4,0.4
-				maxScale = 0.8,0.8,0.8
+				minScale = 0.400000006,0.400000006,0.400000006
+				maxScale = 0.800000012,0.800000012,0.800000012
 				scaleRandomness = 0.5
-				cutoffScale = 0.64
-				steepPower = 0.001
+				cutoffScale = 0.639999986
+				steepPower = 0.00100000005
 				steepContrast = 4.5
-				steepMidpoint = 0.7
-				maxNormalDeviance = 0.43
-				minAltitude = -1000
+				steepMidpoint = 0.699999988
+				maxNormalDeviance = 0.430000395
+				minAltitude = -10000
 				maxAltitude = 999999
 				altitudeFadeRange = 10
 				alignToTerrainNormal = True
@@ -600,9 +575,6 @@ ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,MPE]
 						{
 						}
 					}
-				}
-				BiomeBlacklist
-				{
 				}
 			}
 		}
