--- a/GameData/OuterParallax/OPM/_Scatters/Configs_C/Tal.cfg
+++ b/GameData/OuterParallax/OPM/_Scatters/Configs_C/Tal.cfg
@@ -1,8 +1,8 @@
-ParallaxScatters-UPGRADED
+ParallaxScatters:NEEDS[Parallax_StockTerrainTextures,OPM]
 {
 	Body
 	{
-		name = Tal // To activate this config, replace ParallaxScatters-UPGRADED with ParallaxScatters
+		name = Tal
 		configVersion = 2
 		Scatter
 		{
@@ -11,7 +11,7 @@ ParallaxScatters-UPGRADED
 			collisionLevel = 1
 			Optimizations
 			{
-				frustumCullingStartRange = 50
+				frustumCullingStartRange = 75
 				frustumCullingScreenMargin = -40
 				maxObjects = 10000
 			}
@@ -31,18 +31,16 @@ ParallaxScatters-UPGRADED
 			Material
 			{
 				shader = Custom/ParallaxInstancedSolid
-				_MainTex = Parallax_StockScatterTextures/Textures/Gilly/PluginData/low00.dds
-				_BumpMap = Parallax_StockScatterTextures/Textures/Gilly/PluginData/low01.dds
+				_MainTex = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlas.dds
 				_BumpMap = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlasnrm.dds
-				_SpecularIntensity = 3.32791996
 				_SpecularPower = 135
-				_NormalSpecularInfluence = 1
-				_Hapke = 0.349999994
-				_BumpScale = 1.70000005
+				_SpecularIntensity = 3.32791996
 				_FresnelPower = 3
 				_EnvironmentMapFactor = 1
-				_Color = 1,1,1,1
+				_BumpScale = 1.70000005
+				_Hapke = 0.349999994
 				_FresnelColor = 0.150000006,0.150000006,0.150000006,1
+				_Color = 1,1,1,1
 				_CullMode = 2
 				Keywords
 				{
@@ -52,7 +50,7 @@ ParallaxScatters-UPGRADED
 			{
 				seed = 0
 				spawnChance = 1
-				range = 100
+				range = 150
 				populationMultiplier = 13
 				minScale = 0.100000001,0.100000001,0.100000001
 				maxScale = 0.200000003,0.200000003,0.200000003
@@ -61,7 +59,7 @@ ParallaxScatters-UPGRADED
 				steepPower = 4
 				steepContrast = 2
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.200000003
+				maxNormalDeviance = 0.200000346
 				minAltitude = -1000
 				maxAltitude = 10000
 				altitudeFadeRange = 10
@@ -72,7 +70,7 @@ ParallaxScatters-UPGRADED
 					LOD
 					{
 						model = Parallax_StockScatterTextures/Models/Gilly/smallvar1lod1
-						range = 15
+						range = 22.5
 						MaterialOverride
 						{
 						}
@@ -80,25 +78,22 @@ ParallaxScatters-UPGRADED
 					LOD
 					{
 						model = Parallax_StockScatterTextures/Models/Gilly/smallvar1lod2
-						range = 30
+						range = 45
 						MaterialOverride
 						{
 						}
 					}
-				}
-				BiomeBlacklist
-				{
 				}
 			}
 		}
 		Scatter
 		{
 			name = SmallRocksVar2
-			model = Parallax_StockScatterTextures/Models/Gilly/smallvar2lod0
+			model = Parallax_StockScatterTextures/Models/Gilly/smallvar1lod0
 			collisionLevel = 1
 			Optimizations
 			{
-				frustumCullingStartRange = 50
+				frustumCullingStartRange = 75
 				frustumCullingScreenMargin = -40
 				maxObjects = 10000
 			}
@@ -118,18 +113,16 @@ ParallaxScatters-UPGRADED
 			Material
 			{
 				shader = Custom/ParallaxInstancedSolid
-				_MainTex = Parallax_StockScatterTextures/Textures/Gilly/PluginData/low00.dds
-				_BumpMap = Parallax_StockScatterTextures/Textures/Gilly/PluginData/low01.dds
+				_MainTex = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlas.dds
 				_BumpMap = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlasnrm.dds
-				_SpecularIntensity = 3.32791996
 				_SpecularPower = 135
-				_NormalSpecularInfluence = 1
-				_Hapke = 0.349999994
-				_BumpScale = 1.70000005
+				_SpecularIntensity = 3.32791996
 				_FresnelPower = 3
 				_EnvironmentMapFactor = 1
-				_Color = 1,1,1,1
+				_BumpScale = 1.70000005
+				_Hapke = 0.349999994
 				_FresnelColor = 0.150000006,0.150000006,0.150000006,1
+				_Color = 1,1,1,1
 				_CullMode = 2
 				Keywords
 				{
@@ -139,7 +132,7 @@ ParallaxScatters-UPGRADED
 			{
 				seed = 1
 				spawnChance = 1
-				range = 100
+				range = 150
 				populationMultiplier = 12
 				minScale = 0.100000001,0.100000001,0.100000001
 				maxScale = 0.200000003,0.200000003,0.200000003
@@ -148,7 +141,7 @@ ParallaxScatters-UPGRADED
 				steepPower = 4
 				steepContrast = 2
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.200000003
+				maxNormalDeviance = 0.200000346
 				minAltitude = -1000
 				maxAltitude = 10000
 				altitudeFadeRange = 10
@@ -158,29 +151,108 @@ ParallaxScatters-UPGRADED
 				{
 					LOD
 					{
-						model = Parallax_StockScatterTextures/Models/Gilly/smallvar2lod1
-						range = 15
+						model = Parallax_StockScatterTextures/Models/Gilly/smallvar1lod1
+						range = 22.5
 						MaterialOverride
 						{
 						}
 					}
 					LOD
 					{
-						model = Parallax_StockScatterTextures/Models/Gilly/smallvar2lod2
-						range = 30
+						model = Parallax_StockScatterTextures/Models/Gilly/smallvar1lod2
+						range = 45
 						MaterialOverride
 						{
 						}
 					}
-				}
-				BiomeBlacklist
-				{
 				}
 			}
 		}
 		Scatter
 		{
 			name = MedRocksVar1
+			model = Parallax_StockScatterTextures/Models/Gilly/medvar1lod0
+			collisionLevel = 2
+			Optimizations
+			{
+				frustumCullingStartRange = 108.333336
+				frustumCullingScreenMargin = -40
+				maxObjects = 10000
+			}
+			SubdivisionSettings
+			{
+				subdivisionRangeMode = noSubdivision
+			}
+			DistributionNoise
+			{
+				noiseType = simplexPerlin
+				inverted = False
+				frequency = 100
+				octaves = 6
+				lacunarity = 2
+				seed = 1
+			}
+			Material
+			{
+				shader = Custom/ParallaxInstancedSolid
+				_MainTex = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlas.dds
+				_BumpMap = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlasnrm.dds
+				_SpecularPower = 135
+				_SpecularIntensity = 3.32791996
+				_FresnelPower = 3
+				_EnvironmentMapFactor = 1
+				_BumpScale = 1.70000005
+				_Hapke = 0.349999994
+				_FresnelColor = 0.150000006,0.150000006,0.150000006,1
+				_Color = 1,1,1,1
+				_CullMode = 2
+				Keywords
+				{
+				}
+			}
+			Distribution
+			{
+				seed = 3
+				spawnChance = 1
+				range = 650
+				populationMultiplier = 1
+				minScale = 0.100000001,0.100000001,0.100000001
+				maxScale = 0.200000003,0.200000003,0.200000003
+				scaleRandomness = 0.5
+				cutoffScale = 0.0700000003
+				steepPower = 4
+				steepContrast = 2
+				steepMidpoint = 0.731000006
+				maxNormalDeviance = 0.200000346
+				minAltitude = -1000
+				maxAltitude = 10000
+				altitudeFadeRange = 10
+				alignToTerrainNormal = True
+				coloredByTerrain = False
+				LODs
+				{
+					LOD
+					{
+						model = Parallax_StockScatterTextures/Models/Gilly/medvar1lod1
+						range = 43.3333359
+						MaterialOverride
+						{
+						}
+					}
+					LOD
+					{
+						model = Parallax_StockScatterTextures/Models/Gilly/medvar1lod2
+						range = 86.6666718
+						MaterialOverride
+						{
+						}
+					}
+				}
+			}
+		}
+		Scatter
+		{
+			name = MedRocksVar3
 			model = Parallax_StockScatterTextures/Models/Gilly/medvar1lod0
 			collisionLevel = 2
 			Optimizations
@@ -205,105 +277,16 @@ ParallaxScatters-UPGRADED
 			Material
 			{
 				shader = Custom/ParallaxInstancedSolid
-				_MainTex = Parallax_StockScatterTextures/Textures/Gilly/PluginData/low00.dds
-				_BumpMap = Parallax_StockScatterTextures/Textures/Gilly/PluginData/low01.dds
+				_MainTex = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlas.dds
 				_BumpMap = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlasnrm.dds
-				_SpecularIntensity = 3.32791996
 				_SpecularPower = 135
-				_NormalSpecularInfluence = 1
-				_Hapke = 0.349999994
-				_BumpScale = 1.70000005
+				_SpecularIntensity = 3.32791996
 				_FresnelPower = 3
 				_EnvironmentMapFactor = 1
-				_Color = 1,1,1,1
-				_FresnelColor = 0.150000006,0.150000006,0.150000006,1
-				_CullMode = 2
-				Keywords
-				{
-				}
-			}
-			Distribution
-			{
-				seed = 3
-				spawnChance = 1
-				range = 300
-				populationMultiplier = 1
-				minScale = 0.100000001,0.100000001,0.100000001
-				maxScale = 0.200000003,0.200000003,0.200000003
-				scaleRandomness = 0.5
-				cutoffScale = 0.0700000003
-				steepPower = 4
-				steepContrast = 2
-				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.200000003
-				minAltitude = -1000
-				maxAltitude = 10000
-				altitudeFadeRange = 10
-				alignToTerrainNormal = True
-				coloredByTerrain = False
-				LODs
-				{
-					LOD
-					{
-						model = Parallax_StockScatterTextures/Models/Gilly/medvar1lod1
-						range = 20
-						MaterialOverride
-						{
-						}
-					}
-					LOD
-					{
-						model = Parallax_StockScatterTextures/Models/Gilly/medvar1lod2
-						range = 40
-						MaterialOverride
-						{
-						}
-					}
-				}
-				BiomeBlacklist
-				{
-				}
-			}
-		}
-		Scatter
-		{
-			name = MedRocksVar3
-			model = Parallax_StockScatterTextures/Models/Gilly/medvar3lod0
-			collisionLevel = 2
-			Optimizations
-			{
-				frustumCullingStartRange = 50
-				frustumCullingScreenMargin = -40
-				maxObjects = 10000
-			}
-			SubdivisionSettings
-			{
-				subdivisionRangeMode = noSubdivision
-			}
-			DistributionNoise
-			{
-				noiseType = simplexPerlin
-				inverted = False
-				frequency = 100
-				octaves = 6
-				lacunarity = 2
-				seed = 1
-			}
-			Material
-			{
-				shader = Custom/ParallaxInstancedSolid
-				_MainTex = Parallax_StockScatterTextures/Textures/Gilly/PluginData/low00.dds
-				_BumpMap = Parallax_StockScatterTextures/Textures/Gilly/PluginData/low01.dds
-				_BumpMap = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlasnrm.dds
-				_SpecularIntensity = 3.32791996
-				_SpecularPower = 135
-				_NormalSpecularInfluence = 1
-				_Hapke = 0.349999994
 				_BumpScale = 1.70000005
-				_FresnelPower = 3
-				_EnvironmentMapFactor = 1
-				_Color = 1,1,1,1
+				_Hapke = 0.349999994
 				_FresnelColor = 0.150000006,0.150000006,0.150000006,1
+				_Color = 1,1,1,1
 				_CullMode = 2
 				Keywords
 				{
@@ -322,7 +305,7 @@ ParallaxScatters-UPGRADED
 				steepPower = 4
 				steepContrast = 2
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.200000003
+				maxNormalDeviance = 0.200000346
 				minAltitude = -1000
 				maxAltitude = 10000
 				altitudeFadeRange = 10
@@ -332,23 +315,20 @@ ParallaxScatters-UPGRADED
 				{
 					LOD
 					{
-						model = Parallax_StockScatterTextures/Models/Gilly/medvar3lod1
-						range = 60
+						model = Parallax_StockScatterTextures/Models/Gilly/medvar1lod1
+						range = 60.0000038
 						MaterialOverride
 						{
 						}
 					}
 					LOD
 					{
-						model = Parallax_StockScatterTextures/Models/Gilly/medvar3lod2
-						range = 120
+						model = Parallax_StockScatterTextures/Models/Gilly/medvar1lod2
+						range = 120.000008
 						MaterialOverride
 						{
 						}
 					}
-				}
-				BiomeBlacklist
-				{
 				}
 			}
 		}
@@ -379,18 +359,16 @@ ParallaxScatters-UPGRADED
 			Material
 			{
 				shader = Custom/ParallaxInstancedSolid
-				_MainTex = Parallax_StockScatterTextures/Textures/Gilly/PluginData/low00.dds
-				_BumpMap = Parallax_StockScatterTextures/Textures/Gilly/PluginData/low01.dds
+				_MainTex = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlas.dds
 				_BumpMap = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlasnrm.dds
-				_SpecularIntensity = 3.32791996
 				_SpecularPower = 135
-				_NormalSpecularInfluence = 1
-				_Hapke = 0.349999994
-				_BumpScale = 2
+				_SpecularIntensity = 3.32791996
 				_FresnelPower = 3
 				_EnvironmentMapFactor = 1
-				_Color = 1,1,1,1
+				_BumpScale = 2
+				_Hapke = 0.349999994
 				_FresnelColor = 0.150000006,0.150000006,0.150000006,1
+				_Color = 1,1,1,1
 				_CullMode = 2
 				Keywords
 				{
@@ -409,7 +387,7 @@ ParallaxScatters-UPGRADED
 				steepPower = 4
 				steepContrast = 2
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.200000003
+				maxNormalDeviance = 0.200000346
 				minAltitude = -1000
 				maxAltitude = 10000
 				altitudeFadeRange = 10
@@ -434,15 +412,12 @@ ParallaxScatters-UPGRADED
 						}
 					}
 				}
-				BiomeBlacklist
-				{
-				}
 			}
 		}
 		Scatter
 		{
 			name = LargeRocksVar2
-			model = Parallax_StockScatterTextures/Models/Gilly/largevar2lod0
+			model = Parallax_StockScatterTextures/Models/Gilly/largevar1lod0
 			collisionLevel = 3
 			Optimizations
 			{
@@ -466,18 +441,16 @@ ParallaxScatters-UPGRADED
 			Material
 			{
 				shader = Custom/ParallaxInstancedSolid
-				_MainTex = Parallax_StockScatterTextures/Textures/Gilly/PluginData/low00.dds
-				_BumpMap = Parallax_StockScatterTextures/Textures/Gilly/PluginData/low01.dds
+				_MainTex = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlas.dds
 				_BumpMap = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlasnrm.dds
-				_SpecularIntensity = 3.32791996
 				_SpecularPower = 135
-				_NormalSpecularInfluence = 1
-				_Hapke = 0.349999994
-				_BumpScale = 1.70000005
+				_SpecularIntensity = 3.32791996
 				_FresnelPower = 3
 				_EnvironmentMapFactor = 1
-				_Color = 1,1,1,1
+				_BumpScale = 1.70000005
+				_Hapke = 0.349999994
 				_FresnelColor = 0.150000006,0.150000006,0.150000006,1
+				_Color = 1,1,1,1
 				_CullMode = 2
 				Keywords
 				{
@@ -496,7 +469,7 @@ ParallaxScatters-UPGRADED
 				steepPower = 4
 				steepContrast = 2
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.200000003
+				maxNormalDeviance = 0.200000346
 				minAltitude = -1000
 				maxAltitude = 10000
 				altitudeFadeRange = 10
@@ -506,7 +479,7 @@ ParallaxScatters-UPGRADED
 				{
 					LOD
 					{
-						model = Parallax_StockScatterTextures/Models/Gilly/largevar2lod1
+						model = Parallax_StockScatterTextures/Models/Gilly/largevar1lod1
 						range = 120
 						MaterialOverride
 						{
@@ -514,22 +487,19 @@ ParallaxScatters-UPGRADED
 					}
 					LOD
 					{
-						model = Parallax_StockScatterTextures/Models/Gilly/largevar2lod2
+						model = Parallax_StockScatterTextures/Models/Gilly/largevar1lod2
 						range = 240
 						MaterialOverride
 						{
 						}
 					}
 				}
-				BiomeBlacklist
-				{
-				}
 			}
 		}
 		Scatter
 		{
 			name = LargeRocksVar3
-			model = Parallax_StockScatterTextures/Models/Gilly/largevar3lod0
+			model = Parallax_StockScatterTextures/Models/Gilly/largevar1lod0
 			collisionLevel = 3
 			Optimizations
 			{
@@ -553,18 +523,16 @@ ParallaxScatters-UPGRADED
 			Material
 			{
 				shader = Custom/ParallaxInstancedSolid
-				_MainTex = Parallax_StockScatterTextures/Textures/Gilly/PluginData/low00.dds
-				_BumpMap = Parallax_StockScatterTextures/Textures/Gilly/PluginData/low01.dds
+				_MainTex = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlas.dds
 				_BumpMap = Parallax_StockScatterTextures/Textures/Gilly/PluginData/rockatlasnrm.dds
-				_SpecularIntensity = 3.32791996
 				_SpecularPower = 135
-				_NormalSpecularInfluence = 1
-				_Hapke = 0.349999994
-				_BumpScale = 2
+				_SpecularIntensity = 3.32791996
 				_FresnelPower = 3
 				_EnvironmentMapFactor = 1
-				_Color = 1,1,1,1
+				_BumpScale = 2
+				_Hapke = 0.349999994
 				_FresnelColor = 0.150000006,0.150000006,0.150000006,1
+				_Color = 1,1,1,1
 				_CullMode = 2
 				Keywords
 				{
@@ -583,7 +551,7 @@ ParallaxScatters-UPGRADED
 				steepPower = 4
 				steepContrast = 2
 				steepMidpoint = 0.731000006
-				maxNormalDeviance = 0.200000003
+				maxNormalDeviance = 0.200000346
 				minAltitude = -1000
 				maxAltitude = 10000
 				altitudeFadeRange = 10
@@ -593,7 +561,7 @@ ParallaxScatters-UPGRADED
 				{
 					LOD
 					{
-						model = Parallax_StockScatterTextures/Models/Gilly/largevar3lod1
+						model = Parallax_StockScatterTextures/Models/Gilly/largevar1lod1
 						range = 120
 						MaterialOverride
 						{
@@ -601,15 +569,12 @@ ParallaxScatters-UPGRADED
 					}
 					LOD
 					{
-						model = Parallax_StockScatterTextures/Models/Gilly/largevar3lod2
+						model = Parallax_StockScatterTextures/Models/Gilly/largevar1lod2
 						range = 240
 						MaterialOverride
 						{
 						}
 					}
-				}
-				BiomeBlacklist
-				{
 				}
 			}
 		}
